--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/jpgl" href="/asteroid.jpg" />
+    <link rel="icon" type="image/jpgl" href="/OrbitalEyeLogo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>OrbitalEye</title>
   </head>
